core/src/ast/snapshots/diplomat_core__ast__types__tests__typename_option_result-2.snap
---
source: core/src/ast/types.rs
expression: "TypeName::from(&syn::parse_quote! { Option < MyLocalStruct > }).unwrap())"

---
Option:
  Named:
    elements:
      - MyLocalStruct

