core/src/ast/snapshots/diplomat_core__ast__types__tests__typename_option_result-3.snap
---
source: core/src/ast/types.rs
expression: "TypeName::from(&syn::parse_quote! {\n                                Result < MyLocalStruct, i32 >\n                            }).unwrap())"

---
Result:
  - Named:
      elements:
        - MyLocalStruct
  - Primitive: i32

