core/src/ast/snapshots/diplomat_core__ast__types__tests__typename_option_result-4.snap
---
source: core/src/ast/types.rs
expression: "TypeName::from(&syn::parse_quote! { Result < (), MyLocalStruct > }).unwrap())"

---
Result:
  - Primitive: Void
  - Named:
      elements:
        - MyLocalStruct

