core/src/ast/snapshots/diplomat_core__ast__types__tests__typename_option_result.snap
---
source: core/src/ast/types.rs
expression: "TypeName::from(&syn::parse_quote! { Option < i32 > }).unwrap())"

---
Option:
  Primitive: i32

