core/src/ast/snapshots/diplomat_core__ast__types__tests__typename_primitives-2.snap
---
source: core/src/ast/types.rs
expression: "TypeName::from(&syn::parse2(quote! { usize }).unwrap())"

---
Primitive: usize

