core/src/ast/snapshots/diplomat_core__ast__types__tests__typename_primitives-3.snap
---
source: core/src/ast/types.rs
expression: "TypeName::from(&syn::parse2(quote! { bool }).unwrap())"

---
Primitive: bool

