core/src/ast/snapshots/diplomat_core__ast__types__tests__typename_primitives.snap
---
source: core/src/ast/types.rs
expression: "TypeName::from(&syn::parse_quote! { i32 }).unwrap())"

---
Primitive: i32

