core/src/ast/snapshots/diplomat_core__ast__types__tests__typename_references.snap
---
source: core/src/ast/types.rs
expression: "TypeName::from(&syn::parse2(quote! { & i32 }).unwrap())"

---
Reference:
  - Primitive: i32
  - false

